# analytic-api

./: .dockerignore  Dockerfile.web  compose.yaml  main.py  pyproject.toml  rmain.py
app/: .env  app.py
boot/: docker-run.sh
nbs/: test.ipynb
src/: main.py
src/api/db/: session.py
src/api/events/: models.py  routing.py  schemas.py
