[project]
name = "analytic-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.133.1",
    "dotenv",
    "uvicorn",
    "gunicorn",
    "timescaledb",
    "sqlmodel",
    "pydantic",
    "sqlalchemy",
    "requests>=2.32.5",
    "imagekitio>=5.2.0",
    "aiosqlite>=0.22.1",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
]
